# codexio

./: BRAINDUMP.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: config.rs  default_template.hbs  git.rs  input.rs  lib.rs  main.rs  output.rs  path.rs  processing.rs  template.rs  token.rs
tests/: git_test.rs  integration_test.rs  template_test.rs  test_filter.rs
