[package]
name = "Codexio"
authors = ["Ethan Wickstrom <ethan@whatsfabric.com>"]
description = "A lightning-fast Rust-based CLI tool that distills any codebase into a powerful LLM prompt, no matter the size."
keywords = ["code-generation", "llm-prompts", "gpt-tools", "ai-coding-utilities", "code-to-prompt"]
categories = ["command-line-utilities", "development-tools", "command-line-interface", "template-engine"]
homepage = "https://github.com/ethan-wickstrom/codexio"
repository = "https://github.com/ethan-wickstrom/codexio"
license = "Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codexio"
test = false
bench = false
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
handlebars = "6.0.0"
jwalk = "0.8.1"
termtree = "0.5.1"
serde_json = "1.0.125"
indicatif = "0.17.8"
colored = "2.1.0"
tiktoken-rs = "0.5.9"
ignore = "0.4.22"
anyhow = "1.0.86"
inquire = "0.7.5"
regex = "1.10.6"
git2 = { version = "0.19.0", default_features = false, features = [ "https", "vendored-libgit2", "vendored-openssl" ] }
glob = "0.3.1"
once_cell = "1.19.0"
log = "0.4"
env_logger = "0.11.5"
arboard = "3.4.0"

[profile.release]
lto = "fat"
panic = 'abort'
codegen-units = 1
rpath = false
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = true

[package.metadata.deb]
section = "utility"
assets = [
    ["target/release/codexio", "usr/bin/", "755"],
]

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "3.1.2"
env_logger = "0.11.3"
